# thaler-sample-wallet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  angular.json  main.js  package-lock.json  package.json  spawn.md  tslint.json
.github/: PULL_REQUEST_TEMPLATE.md
e2e/src/: app.e2e-spec.ts
src/: index.html  karma.conf.js  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  config.ts  types.ts  wallet.service.spec.ts  wallet.service.ts
src/app/components/create-address-form/: create-address-form.component.html  create-address-form.component.spec.ts  create-address-form.component.ts
src/app/home/: home.component.html  home.component.spec.ts
src/app/interceptor/: httpconfig.interceptor.ts
src/app/services/: multi-sig.service.spec.ts  multi-sig.service.ts  wallet-selection.service.spec.ts  wallet-selection.service.ts  wallet.service.spec.ts  wallet.service.ts
src/app/shared/: address.directive.spec.ts  address.directive.ts  stakingAddress.directive.ts  view-key.directive.spec.ts  view-key.directive.ts
src/app/txn-history/: txn-history.component.html  txn-history.component.scss  txn-history.component.spec.ts  txn-history.component.ts
src/app/types/: transaction.ts  wallet.ts
src/app/wallet-list/: wallet-list.component.html  wallet-list.component.ts
wallet-rust/: .gitignore  package.json  readme.md
wallet-rust/lib/: index.js
wallet-rust/native/: Cargo.toml  artifacts.json  build.rs
wallet-rust/native/src/: lib.rs  win_delay_load_hook.cc
(+91 files in other folders)
